doc: linking and navigating

--- a/data/blog/nextjs_app_router_1.mdx
+++ b/data/blog/nextjs_app_router_1.mdx
@@ -16,7 +16,7 @@ Next.js 有两套路由解决方案，之前的方案称之为“Pages Router”
 
 ## 1. Next.js 为什么升级到 App Router ？
 
-- 这种方式有一个弊端，那就是 pages 目录的所有 js 文件都会被当成路由文件，这就导致比如组件不能写在 pages 目录下，不符合开发者的使用习惯。（当然 Pages Router 还有很多其他的问题）
+- Pages Router 方式有一个弊端，那就是 pages 目录的所有 js 文件都会被当成路由文件，这就导致比如组件不能写在 pages 目录下，不符合开发者的使用习惯。（当然 Pages Router 还有很多其他的问题）
 - 升级为新的 App Router 后，现在的目录结构类似于：
 
 ```javascript
