--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -5,4 +5,36 @@ email: minoulmccc@gmail.com
 github: https://github.com/Minouccc
 ---
 
-🧑‍💻独立开发｜⛵️出海
+🧑‍💻独立开发
+
+⛵️开发技能
+
+<small>**·** 编程语言： TypeScript、JavaScript</small>
+<br />
+
+<small>**·** UI：TailwindCSS、UnoCSS、Less、Sass、Shadcn UI、Radix UI</small>
+<br />
+
+<small>**·** 框架： React、Vue2、Vue3、UmiJs、Ant Design Pro </small>
+<br />
+
+<small>**·** 小程序：Taro、Uni-app、Uni-best</small>
+<br />
+
+<small>**·** 服务端：Nodejs、 Nestjs、Nuxt、Nextjs</small>
+<br />
+
+<small>**·** 数据库：MySQL、Redis、MongoDB</small>
+<br />
+
+<small>**·** ORM：Prisma、TypeORM</small>
+<br />
+
+<small>**·** 工具：Linux、Docker、Nginx、PM2、Amazon S3、Cloudfare</small>
+<br />
+
+<small>**·** 可视化：Canvas、Fabric.js、Echarts</small>
+
+<small>
+  **·** 其他: 低代码、地图、组件库、应用监控、微前端、性能优化、前端工程化等业务方向经验
+</small>
