--- a/data/blog/frontend.mdx
+++ b/data/blog/frontend.mdx
@@ -17,7 +17,7 @@ summary:
 **回答逻辑**：
 
 1. 提框架设计。 `设计模式 MVVM(双向绑定) | 虚拟 DOM(vNode) | Diff 算法(就地服用原则) | Tree Shaking(ES module)`
-2. 讲一下 vue2 和 vue3 的区别。`响应式(原理) | 组合式 API | 新特性(Teleport、Suspense、keep-alive、setup语法糖) | ts 集成 | 生命周期(重点关注多组件挂载顺序)`
+2. 讲一下 vue2 和 vue3 的区别。`响应式(原理) | 组合式 API | 新特性(Teleport、Suspense、keep-alive、setup语法糖、插槽) | ts 集成 | 生命周期(重点关注多组件挂载顺序)`
 3. 语法 `v-指令 | 修饰符 | 插槽`
 
 **扩展问题**：react vs vue 框架
